--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
-<small>Posted on {{ page.date | date: "%Y-%m-%d %H:%M" }} [{{ page.categories | join: ', '}}]</small>
+<small>Posted on {{ page.date | date: "%Y-%m-%d %H:%M" }} [{{ page.tags | join: ', '}}]</small>
 <hr>
 <br>
 {{ content }}
