--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -3,31 +3,31 @@
  */
 
 :root {
-  --base-color: #dbdbdb;
-  --border: dashed 1px rgba(219, 219, 219, 0.9);
-  --selection-background: rgba(219, 219, 219, 0.99);
-  --selection-text: #000;
-  --background-color: #000;
+  --base-color: #ebdbb2;
+  --border: dashed 1px rgba(235, 219, 178, 0.9);
+  --selection-background: rgba(235, 219, 178, 0.99);
+  --selection-text: #282828;
+  --background-color: #282828;
   --text-color: var(--base-color);
   --placeholder-color: var(--base-color);
   --link-color: var(--base-color);
-  --code-color-1: #aaaaaa;
-  --code-color-2: #ffffcc;
-  --code-color-3: #f00000;
-  --code-color-4: #f0a0a0;
+  --code-color-1: #a89984;
+  --code-color-2: #fbf1c7;
+  --code-color-3: #fb4934;
+  --code-color-4: #d3869b;
   --code-color-5: #b38aff;
-  --code-color-6: #5ba711;
-  --code-color-7: #e4e477;
-  --code-color-8: #000080;
-  --code-color-9: #05ca05;
-  --code-color-10: #888888;
-  --code-color-11: #555555;
-  --code-color-12: #800080;
-  --code-color-13: #00d4d4;
-  --code-color-14: #00c1c1;
-  --code-color-15: #ed9d13;
-  --code-color-16: #1e90ff;
-  --code-color-17: #800000;
-  --code-color-18: #bbbbbb;
-  --code-color-19: #eeeeee;
+  --code-color-6: #8ec07c;
+  --code-color-7: #fabd2f;
+  --code-color-8: #83a598;
+  --code-color-9: #b8bb26;
+  --code-color-10: #928374;
+  --code-color-11: #7c6f64;
+  --code-color-12: #b16286;
+  --code-color-13: #458588;
+  --code-color-14: #458588;
+  --code-color-15: #fe8019;
+  --code-color-16: #458588;
+  --code-color-17: #cc241d;
+  --code-color-18: #a89984;
+  --code-color-19: #ebdbb2;
 }
