--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <meta name="google-site-verification" content="btC47gpqxpZQvIpcx6tqGfQYOVSGxnedHE5yA_AAlMk" />
 </head>
