added tags, and some style modifications

--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -4,7 +4,7 @@
 
 :root {
   --base-color: #ebdbb2;
-  --border: dashed 1px rgba(235, 219, 178, 0.9);
+  --border: double #bdae93;
   --selection-background: rgba(235, 219, 178, 0.99);
   --selection-text: #282828;
   --background-color: #282828;
