--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   {% endif %}
 
     <link rel="stylesheet" type="text/css" href="{{ "assets/main-dark.css" | relative_url }}">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
 
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
