--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
     <meta name="robots" content="{{page.robots}}" />
   {% endif %}
 
-    <link rel="stylesheet" type="text/css" href="{{ "assets/main-dark.css" | relative_url }}">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" type="text/css" href="{{ 'assets/main-dark.css' | relative_url }}">
+    <link rel="shortcut icon" type="image/png" href="{{ 'favicon.png' | relative_url }}">
 
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
