--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -63,8 +63,17 @@ hr {
   border: 1px solid var(--code-color-11);
 }
 hr.footnote {
-  border: 1px dotted var(--code-color-11);
+  border: 1px dashed var(--code-color-11);
 }
+
+.footnotes {
+  font-size:smaller;
+}
+
+.footnotes li p {
+  margin-bottom: 0.5pt !important;
+}
+
 @media only screen and (max-device-width: 500px) {
   * {
     font-size: $mobile-font-size !important;
@@ -95,7 +104,7 @@ p {
   word-wrap: break-word;
   word-break: break-word;
   white-space: pre-wrap;
-  margin-bottom: 15px;
+  margin: 10px 0 10px 0;
 }
 footer {
   color: var(--text-color);
@@ -119,6 +128,10 @@ div.tag-list {
   float: right;
   text-align: right;
 }
+sup {
+  vertical-align: top;
+  font-size: 0.7em;
+}
 
 /**
  * Highlight/Markup
@@ -135,14 +148,14 @@ div.tag-list {
 /**
  * Lists
  */
-:not(.menu) > ul {
+:not(.menu) > ul.special {
   list-style: none;
   padding-left: 0;
 }
-:not(.menu) > ul {
+:not(.menu) > ul.special {
   list-style-type: none;
 }
-:not(.menu) > ul > li:before {
+:not(.menu) > ul.special > li:before {
   content: "+";
   margin-right: 9px;
 }
@@ -212,6 +225,12 @@ pre {
   line-height: 1.7 !important;
   font-family: $base-font-family !important;
 }
+
+div.highlight {
+  width: 90%;
+  margin: auto;
+}
+
 .highlight .hll {
   background-color: var(--code-color-2);
 }
