--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 {%- assign page_paths = site.header_pages | default: default_paths -%}
 <header>
   <div class="menu">
-    <p><b>~$ <a href="{{ site.baseurl }}/">ibarbitrary's blog</a></b></p>
+    <p><b>~$ <a href="{{ site.baseurl }}/">{{ site.title }}</a></b></p>
     <ul>
       {%- for path in page_paths -%}
         {%- assign my_page = site.pages | where: "path", path | first -%}
